Fix compilation and configuraton for wpa_supplicant.

--- a/wpa_supplicant/android.config
+++ b/wpa_supplicant/android.config
@@ -29,7 +29,7 @@
 #CONFIG_DRIVER_WEXT=y
 
 # Driver interface for Linux drivers using the nl80211 kernel interface
-#CONFIG_DRIVER_NL80211=y
+CONFIG_DRIVER_NL80211=y
 CONFIG_LIBNL20=y
 
 # QCA vendor extensions to nl80211
